# neon-data-process-VOR

./: .gitignore  LICENSE.MD  README.md  analizeVOR.m  launchAnalysisWindow.m  prScoreVVR.m  pyproject.toml
dataset/: README.md
dataset/sample/: blinks.csv  events.csv  fixations.csv  info.json  saccades.csv  scene_camera.json  template.csv  world_timestamps.csv
scripts/: README.md  pixel_to_deg_gaze.py  plot_gaze_velocity.py  plot_imu_gaze.py  plot_imu_gaze_main.py  plot_imu_gaze_video.py
scripts/external_imu_sync/: README.md  apply_offset_to_external_imu.py  clock_offset.json  keypress_to_neon_sync.py  record_external_imu_with_sync.py
scripts/jorge2018/: README.md  __init__.py  auc_vor_gain.py
scripts/jorge2018/original/: splitTest.m  vvor.m
scripts/test_qtpy/data/: LF.csv  RF.csv  imu_data_20260320_171949.csv
scripts/test_qtpy/firmware/: adafruit_icm20948_two.ino
scripts/test_qtpy/firmware/sketch_dec2a/: sketch_dec2a.ino
scripts/test_qtpy/pc/: csv_visualization.py  csv_visualization_allpath.py  fill_missing_imu_fields.py  serial_record.py  serial_record_neon_sync.py
